<resources>
    <string name="app_name">My Application</string>
    <string name="Home">Home</string>
    <string name="Driver">Drivers</string>
    <string name="Learners">Learners</string>
    <string name="Account">Account</string>
    <string name="Support">Support</string>
    <string name="lForms">Learner\'s License Form </string>
    <string name="DForms">Driver\'s License Form </string>
    <string name="MadicalForms">Medical Certificate Form</string>
    <string name="profForms">Professional Driving Permit </string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="driveName">Driving School Name</string>
    <string name="driveLocation">Location Details</string>
    <array name="drivingName">
        <item>Romeo Drving School</item>
        <item>Given Driving Academy</item>
        <item>Fast Academy</item>
    </array>
    <array name="drivingLocation">
        <item>m=Middelburg Next to sasol</item>
        <item>102 Shoshanguve Block l,125</item>
        <item>Polokwane, 120 seshego</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>